--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
 
         strategy:
             matrix:
-                architecture: [x64]
+                architecture: [x64, arm64]
         
         steps:
             -   name: Checkout
